--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dpg": "^0.0.0",
+    "express": "^4.17.1",
+    "pg": "^8.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
